roles/fep/files/iptables
# fep config
# Generated by iptables-save v1.4.7 on Sat May  3 23:39:18 2014
*nat
:PREROUTING ACCEPT [93097:5336505]
:POSTROUTING ACCEPT [364222:22040220]
:OUTPUT ACCEPT [364222:22040220]
-A PREROUTING -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 8000 
-A PREROUTING -p tcp -m tcp --dport 443 -j REDIRECT --to-ports 8443 
-A PREROUTING -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 8000 
-A PREROUTING -p tcp -m tcp --dport 443 -j REDIRECT --to-ports 8443 
COMMIT
# Completed on Sat May  3 23:39:18 2014
# Generated by iptables-save v1.4.7 on Sat May  3 23:39:18 2014
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [83:8107]
:LOGGING - [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 8443 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 8444 -j ACCEPT 
-A INPUT -i eth2 -p tcp -m state --state NEW -m tcp --dport 5666 -j ACCEPT 
-A INPUT -j LOGGING 
-A INPUT -j REJECT --reject-with icmp-host-prohibited 
-A FORWARD -j REJECT --reject-with icmp-host-prohibited 
-A LOGGING -m limit --limit 10/min -j LOG --log-prefix "DROP: " --log-level 7 
-A LOGGING -j DROP 
COMMIT
# Completed on Sat May  3 23:39:18 2014
